# studiai

./: .gga  .gitignore  AGENTS.md  CHANGELOG.md  README.md  build-dmg.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
cloudflare/gemini-proxy/: README.md  package.json  wrangler.jsonc
cloudflare/gemini-proxy/src/: index.ts
docs/: DEPLOYMENT_CHECKLIST.md  PROXY-GEMINI.md  REDISENO-IA.md
evals/: README.md  build-system-prompt.mjs  golden-set.yaml  promptfooconfig.yaml  smoke-memory.mjs  smoke-prompt.mjs  smoke-tools.mjs
evals/asserts/: no-voseo.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/fonts/: NewCMMath-GUST-FONT-LICENSE.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/canvas/: classify.rs  cleanup.rs  client.rs  mod.rs  models.rs  sync.rs
src-tauri/src/pdf/: assets.rs  engine.rs  mod.rs  templates.rs
src-tauri/src/prompts/examples/: format-hierarchy.txt  pdf-generation.txt  tool-use.txt
src-tauri/src/prompts/sections/: 01-base.txt  02-comportamiento.txt  03-capacidades.txt  04-herramientas.txt  05-formato.txt  06-estilo.txt  07-coaching.txt
src/components/: ChangelogModal.tsx  ChatInput.tsx  ChatPanel.tsx  DocumentModal.tsx  MarkdownContent.tsx  PomodoroWidget.tsx  Rail.tsx  SettingsModal.tsx  Sidebar.tsx  StoragePreferenceModal.tsx  SyncProgress.tsx  TasksPanel.tsx  Toast.tsx  UpdateProgressOverlay.tsx
src/components/settings/: AcercaSection.tsx  CanvasSection.tsx  CuentaSection.tsx  DocumentosSection.tsx  MemoriaSection.tsx  PlanesSection.tsx  ProductividadSection.tsx  StyleFields.tsx
src/hooks/: useCanvasData.ts  useChat.ts
src/lib/: analytics.ts  cn.ts  documentStyle.ts  lruCache.ts  supabase.ts  updater.ts
src/pages/: Dashboard.tsx  Login.tsx  MainLayout.tsx  Onboarding.tsx  Paywall.tsx
src/store/: authStore.ts  timerStore.ts
src/styles/: tokens.css
src/types/: culqi.d.ts
src/workers/: pomodoroWorker.ts
supabase/functions/culqi-charge/: index.ts
supabase/migrations/: 20260624_studiai_usage_events_analytics.sql
tests/: smoke.test.mjs
